samples/_failures_safe/1761494062_2d84ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce4a6cab.c: In function ‘main’:
./samples/SAFE/__tmp_ce4a6cab.c:137:13: error: expected declaration or statement at end of input
  137 |             }
      |             ^
./samples/SAFE/__tmp_ce4a6cab.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce4a6cab.c:137:13: error: expected declaration or statement at end of input
